--- a/login.css
+++ b/login.css
@@ -48,6 +48,9 @@ body {
     letter-spacing:.6px;
     margin: 0 10px;
 }
+#menu-items > a:hover {
+  color:#20b883;
+}
 #logout-btn {
     color: rgba(0,0,0,.8);
     font-size: 16px;
